# ai-win-ui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_LOG.md  README.md  build.cmd  build.ps1  cycle_explainer.html  dump.txt  test_xml.cpp  vcpkg.json
.agents/skills/run-ai-win-ui/: SKILL.md
.github/workflows/: ci.yml
doc/: README.md  advanced-rendering-workplan.md  keyboard-matrix.md  layout-spec.md  mvp-acceptance.md  mvp-execution-plan.md  mvp-roadmap.md  overlay-popup-contract.md  pr-custom-window-chrome-v1.md  resource-packaging.md  skia-integration.md  skia-prebuilt-survey.md  skills.md  style-catalog.md  window-chrome.md  yoga-integration.md  yoga-progress-update.md
doc/plan/: 2026-04-26-declarative-style-system-v1.md  2026-04-26-skia-svg-integration-v1.md  2026-04-26-theme-tokens-v1.md  2026-07-15-custom-chrome-irregular-window-v1.md  2026-07-15-directui-p0-hardening.md  2026-07-15-directui-productization-personas.md  2026-07-15-layered-irregular-window-v2.md  2026-07-15-skia-layered-multimon-perf.md  2026-07-16-embed-api-v1.md  token-migration-strategy.md  wave1-text-parity-notes.md
include/ai_win_ui/: host.h  version.h
lib/: .gitkeep
resource/: .gitkeep
resource/images/: .gitkeep
resource/layouts/: .gitkeep  advanced_inputs.json  advanced_inputs.xml  cjk_render_test.json  cjk_render_test.xml  core_controls_v2.json  core_controls_v2.xml  core_validation.xml  custom_chrome_demo.xml  dashboard_reference.xml  dashboard_responsive.xml  demo_gallery.xml  drag_drop_cases.xml  gradient_shadow_demo.xml  layered_chrome_demo.xml  modal_demo.xml  navigation_components.json  navigation_components.xml  popup_theme_demo.xml  rolancpp_launcher.xml  scroll_viewer_cases.xml  seagull_animation.json  seagull_animation.xml  shaped_heart_window.xml  shaped_oval_window.xml  shaped_petal_window.xml  shaped_star_window.xml  shaped_windows_hub.xml  skia_image_cases.json  skia_image_cases.xml  stats_components.json  stats_components.xml  style_catalog_demo.json  style_catalog_demo.xml  svg_tint_demo.xml  table_components.json  table_components.xml  test_styles.json  test_svg.json  test_theme.json  (+7 more)
resource/styles/: buttons.json  cards.json  default.json
resource/themes/: default.json  light.json
samples/embed_host/: main.cpp
scripts/: check_gallery_coverage.ps1  clear_ai_win_env.ps1  compare_text_dumps.ps1  run_ci_local.ps1  run_core_validation.ps1  run_custom_chrome_demo.ps1  run_dashboard_reference.ps1  run_demo_gallery.ps1  run_headless_smoke.ps1  run_layered_chrome_demo.ps1  run_layout_demo.ps1  run_measure_dump.ps1  run_measure_golden.ps1  run_shaped_windows_demo.ps1  run_text_dump.ps1  run_validation_suite.ps1  setup_ci_deps.ps1  setup_skia_prebuilt.ps1
src/: application.cpp  application.h  box_decoration.cpp  box_decoration.h  graphics_types.h  host_options.h  layout_engine.cpp  layout_engine.h  layout_parser.cpp  layout_parser.h  main.cpp  renderer.cpp  renderer.h  renderer_skia.cpp  resource_provider.cpp  resource_provider.h  skia_font_shared.h  skia_text_layout.cpp  skia_text_layout.h  style.cpp  style.h  style_catalog.cpp  style_catalog.h  text_measurer.cpp  text_measurer.h  text_measurer_dwrite.cpp  text_measurer_skia.cpp  theme.cpp  theme.h  ui.h  ui_context.h  ui_element.h  ui_host.cpp  ui_host.h  ui_inputs.h  ui_lists.h  ui_media.h  ui_menus.h  ui_nav.h  ui_overlays.h  (+11 more)
test_parser/: CMakeLists.txt  test_xml.cpp
tests/golden/: core-validation.direct2d.ndjson  core-validation.skia.ndjson  scroll-viewer.direct2d.ndjson  scroll-viewer.skia.ndjson  yoga-measure.skia.ndjson
